# mseedout

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake.yml
include/mseedout/: dp_packer.hpp  mseedout.hpp  processor.hpp
src/: dp_packer.cpp  main.cpp  mseedout.cpp  processor.cpp  verify.cpp
